# Stepik_chat

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py
app/common/: marker.py  types.py
app/common/db/: base.py  unit_of_work.py
app/common/marker/: gateway.py  redis.py
app/config/: arch_trigger.py
app/core/: loader.py  logger.py  settings.py
app/database/core/: gateway.py  session.py  unit_of_work.py
app/database/models/: __init__.py  base.py  channel.py  manager.py  media.py
app/database/redis/: connection.py
app/database/repr/: crud.py
app/database/repr/media/: media.py
app/filter/: __init__.py  arch_message.py  content_filter.py  filter_message.py  is_admin.py  throttling.py
app/lexicon/: text_builders.py
app/main/: __main__.py  dependency.py
app/middleware/: filter_command.py
app/routers/: __init__.py  add_media.py  add_photo.py  arch_message.py  cancel.py  del_photo.py  help.py  send_photo.py  shit.py  show.py  start_add_photo.py
app/routers/add_photo/: add_photo.py  add_trigger.py  cancel.py  start_add_photo.py  state.py
migration/: env.py
migration/versions/: 9e390b671eb1_.py
migrations/: env.py
migrations/versions/: 447463025e89_test.py  fab4dcce52eb_test.py
