[tool.poetry]
name = "stepik-chat"
version = "0.1.0"
description = ""
authors = ["Nick Ivanukov <ivanukov78@gmail.com>"]
readme = "README.md"

[tool.mypy]
# disable_error_code = ["union-attr", "var-annotated"]
warn_unused_ignores = false
follow_imports_for_stubs = true
pretty = true
show_absolute_path = true
hide_error_codes = false
show_error_context = true
strict = true
warn_unreachable = true
warn_no_return = true

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
sqlalchemy = "^2.0.31"
redis = "^5.0.6"
fast-depends = "^2.4.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

